create github pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="">
   <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -21,7 +22,7 @@
   
 </head>
 <body>
-<section class="tabs3 cid-qH1HnISgoK" id="tabs3-4" data-rv-view="27">
+<section class="tabs3 cid-qH1HnISgoK" id="tabs3-4" data-rv-view="6">
 
     
 
@@ -51,7 +52,7 @@
                     <div class="row tab-content-row">
                         <div class="col-xs-12 col-md-6">
                             <div class="card-img ">
-                                <span class="mbr-iconfont mbri-briefcase" style="color: rgb(35, 35, 35);" media-simple="true"></span>
+                                <span class="mbr-iconfont mbrib-briefcase" style="color: rgb(255, 255, 255);" media-simple="true"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Spanish</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">La Sala entiende que, en efecto, el Juzgador a quo yerra en su interpretación. Que el artículo 65 de la LEC, referente a la resolución de la declinatoria, guarde silencio sobre la condena en costas no significa que en este incidente no exista condena en costas, sino que no existen normas especiales para la misma. Es evidente que quien interpone una demanda de forma indebida, acudiendo a un juez incompetente, como era sin duda el Juzgado a quo para conocer de una demanda de impugnación de acuerdos sociales de una sociedad anónima, y ante la errónea admisión de la demanda por parte del Juzgado, obliga al demandado a formular declinatoria para hacer ver esa incompetencia, genera, al estimarse en su integridad y sin concurrencia alguna de dudas fácticas o jurídicas, la obligación del actor de pagar las costas causadas.</p>
@@ -59,7 +60,7 @@
 
                         <div class="col-xs-12 col-md-6">
                             <div class="card-img ">
-                                <span class="mbr-iconfont mbri-briefcase" style="color: rgb(35, 35, 35);" media-simple="true"></span>
+                                <span class="mbr-iconfont mbrib-briefcase" style="color: rgb(255, 255, 255);" media-simple="true"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">English</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">The Court believes that the lower Court did indeed err in its interpretation. The fact that Article 65 of the Civil Procedure Act, regarding the resolution of motions to dismiss for lack of subject-matter jurisdiction, says nothing of the awarding of costs does not mean that costs are not awarded in this motion, but rather that there are no special rules for the awarding of costs. The lower court undoubtedly lacked jurisdiction to hear a complaint against a corporation’s corporate resolutions. Because the Court mistakenly granted leave to proceed and allowed the claim in its entirety without any factual or legal reservations, the defendant was forced to file a motion to dismiss for lack of subject-matter jurisdiction in order to demonstrate such lack of jurisdiction. It is clear that when a claim is brought improperly by filing the complaint with a court lacking jurisdiction, as in the case at hand, the plaintiff is required to pay the costs incurred.</p>
@@ -75,18 +76,18 @@
                     <div class="row tab-content-row">
                         <div class="col-xs-12 col-md-6">
                             <div class="card-img ">
-                                <span class="mbr-iconfont mbri-video" style="color: rgb(35, 35, 35);" media-simple="true"></span>
+                                <span class="mbr-iconfont mbri-video" style="color: rgb(255, 255, 255);" media-simple="true"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Spanish</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">Con el objetivo de crear conexiones y alianzas el BAM crea el espacio promisorio para aprender y así mismo fortalecer la industria audiovisual colombiana, que está en constante crecimiento. El Bogotá Audiovisual Market – BAM es la oportunidad para proyectos en estado avanzado o proyectos que recién inician para conseguir el impulso bien sea económico o en asesoría que necesitan para lograr el éxito. El país invitado de este año es México, con el cual gracias a la alianza con la Embajada de México en Colombia y el Instituto Mexicano de Cinematografía –IMCINE-, se cuenta con la presencia de una delegación mexicana de lujo, la más grande hasta el momento en la historia del mercado.<br>Entre los espacios que el BAM ofrece está Screenings una sección compuesta de proyecciones de películas en estado avanzado de postproducción, que están en la búsqueda bien sea de un distribuidor o un coproductor que los apoye en la finalización. Por este espacio han pasado películas tan destacadas como Mateo de Maria Gamboa, Gente de bien de Franco Lolli, Tierra en la lengua de Rubén Mendoza, Ruido Rosa de Roberto Flores Prieto, entre otros.<br><br></p>
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">Con el objetivo de crear conexiones y alianzas el BAM crea el espacio promisorio para aprender y así mismo fortalecer la industria audiovisual colombiana, que está en constante crecimiento. El Bogotá Audiovisual Market – BAM es la oportunidad para proyectos en estado avanzado o proyectos que recién inician para conseguir el impulso bien sea económico o en asesoría que necesitan para lograr el éxito. El país invitado de este año es México, con el cual gracias a la alianza con la Embajada de México en Colombia y el Instituto Mexicano de Cinematografía –IMCINE-, se cuenta con la presencia de una delegación mexicana de lujo, la más grande hasta el momento en la historia del mercado.<br><br></p>
                         </div>
 
                         <div class="col-xs-12 col-md-6">
                             <div class="card-img ">
-                                <span class="mbr-iconfont mbri-video" style="color: rgb(35, 35, 35);" media-simple="true"></span>
+                                <span class="mbr-iconfont mbri-video" style="color: rgb(255, 255, 255);" media-simple="true"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">English</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">With the goal of forging connections and building partnerships, the Bogota Audiovisual Market (BAM) creates opportunities to learn and to strengthen the Colombian audiovisual industry, which is currently experiencing steady growth. BAM provides opportunities for audiovisual projects — whether in the final stages of production or just getting started — to receive the guidance or economic support they need to succeed. Mexico is this year’s guest country, and thanks to a partnership with the Mexican Embassy in Colombia and the Mexican Film Institute (IMCINE), BAM will play host to a prestigious Mexican delegation, the largest visiting delegation in the Market’s history.<br>The Screenings section, one of many BAM events, will feature screenings of films in the final stages of post-production that are seeking distributors or co-producers to support them in the completion of their project. In past years, these screenings have included acclaimed films such as Maria Gamboa’s Mateo, Franco Lolli’s Gente de Bien, Rubén Mendoza’s Dust on the Tongue, and Roberto Flores Prieto’s Pink Noise.<br><br></p>
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">With the goal of forging connections and building partnerships, the Bogota Audiovisual Market (BAM) creates opportunities to learn and to strengthen the Colombian audiovisual industry, which is currently experiencing steady growth. BAM provides opportunities for audiovisual projects — whether in the final stages of production or just getting started — to receive the guidance or economic support they need to succeed. Mexico is this year’s guest country, and thanks to a partnership with the Mexican Embassy in Colombia and the Mexican Film Institute (IMCINE), BAM will play host to a prestigious Mexican delegation, the largest visiting delegation in the Market’s history.<br><br></p>
                         </div>
 
                         
@@ -99,7 +100,7 @@
                     <div class="row tab-content-row">
                         <div class="col-xs-12 col-md-6">
                             <div class="card-img ">
-                                <span class="mbr-iconfont mbri-hearth" style="color: rgb(35, 35, 35);" media-simple="true"></span>
+                                <span class="mbr-iconfont mbri-hearth" style="color: rgb(255, 255, 255);" media-simple="true"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Spanish</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">NOVENA.— Este contrato tendrá la vigencia de dos años prorrogables. Llegado el término acordado, la relación quedará extinguida sin necesidad de preaviso ni formalidad alguna, pero si al llegar el término continúa siendo ejecutado el contrato por ambas partes, se considerará prorrogado por otro término igual.<br>DECIMA.— En cuanto a las consecuencias derivadas de la extinción del contrato y posibles indemnizaciones, ambas partes se someten a lo establecido en la referida Ley 12/92 de 27 de Mayo reguladora del Contrato de Agencia, y subsidiariamente a lo dispuesto en el Código de Comercio y Código Civil vigentes en España.</p>
@@ -107,7 +108,7 @@
 
                         <div class="col-xs-12 col-md-6">
                             <div class="card-img ">
-                                <span class="mbr-iconfont mbri-hearth" style="color: rgb(35, 35, 35);" media-simple="true"></span>
+                                <span class="mbr-iconfont mbri-hearth" style="color: rgb(255, 255, 255);" media-simple="true"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">English</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">NINE. This agreement shall be effective for two years and shall be renewable. The relationship shall be terminated, without need for any notice or formalities, upon expiration of the agreed-upon term. However, if upon expiration, the agreement continues to be performed by both parties, it shall be deemed to have been extended for an additional term of the same duration.<br>TEN. With regard to the consequences of a termination of the agreement and any possible compensation, both parties shall abide by the aforementioned Law 12/92 of May 27, on Agency Agreements, and secondarily shall abide by the Commercial Code and Civil Code in force in Spain.</p>
@@ -196,7 +197,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/i">how to build a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
