--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                 </li>
                 <li class="nav-item mbr-fonts-style">
                     <a class="nav-link  display-7" role="tab" data-toggle="tab" href="#tab2">
-                        No coding
+                        Functional
                     </a>
                 </li>
                 <li class="nav-item mbr-fonts-style">
                     <a class="nav-link display-7" role="tab" data-toggle="tab" href="#tab3">
-                        Unique Styles
+                        Unique
                     </a>
                 </li>
                 
@@ -72,7 +72,7 @@
                                 MOBILE FRIENDLY
                             </h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">
-                                No special actions required, all sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site, it will adapt automagically.
+                                No special actions required, all sites are mobile-friendly.
                             </p>
                         </div>
 
@@ -84,7 +84,7 @@
                                 MOBILE FRIENDLY
                             </h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">
-                                No special actions required, all sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site, it will adapt automagically.
+                                You don't have to create a special mobile version of this site, it will adapt automagically.
                             </p>
                         </div>
 
